--- a/CSS/app.css
+++ b/CSS/app.css
@@ -28,7 +28,7 @@ body, html {
 
 .hero-image {
   
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/principalclasico.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/principalclasico.jpg");
 
   
   height: 50%;
